Fix PMD violation: use isBlank() instead of trim().isEmpty()
PMD rule InefficientEmptyStringCheck flags String.trim().isEmpty() as
inefficient. Replaced with String.isBlank() which is the recommended
approach in Java 11+ and is more efficient.

Changes:
- OnDatabaseUrlCondition: !url.trim().isEmpty() → !url.isBlank()
- OnNoDatabaseUrlCondition: url.trim().isEmpty() → url.isBlank()

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>