@@ -19,7 +19,7 @@ public class OnDatabaseUrlCondition extends SpringBootCondition {
       ConditionContext context, AnnotatedTypeMetadata metadata) {
     String url = context.getEnvironment().getProperty("spring.datasource.url");
 
-    if (url != null && !url.trim().isEmpty()) {
+    if (url != null && !url.isBlank()) {
       return ConditionOutcome.match("spring.datasource.url is set to: " + url);
     }
 
